:bug: Fix images on iPad

--- a/src/app/components/header-image/header-image.component.scss
+++ b/src/app/components/header-image/header-image.component.scss
@@ -59,7 +59,7 @@
 }
 
 
-@media (min-width: $media-breakpoint-md) {
+@media (min-width: $media-breakpoint-lg) {
   .header-image-component {
     .header-image-container {
       .header-image {
