:bug: Fix slow loading and spinner animation

--- a/src/app/components/cookies-notification/cookies-notification.component.html
+++ b/src/app/components/cookies-notification/cookies-notification.component.html
@@ -1,4 +1,4 @@
-<div class="cookies-notification-container" *ngIf="displayCookiesNotification">
+<div class="cookies-notification-container" *ngIf="isBrowser && displayCookiesNotification">
     <div class="cookies-notification">
         <div class="cookies-notification-content">
             <div class="cookies-notification-description-container">
