:bug: Prevent navigation dropdown from closing too soon

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -18,31 +18,31 @@
         </div>
       </div>
       <div class="navbar-navigation">
-        <a class="navbar-navigation-link home-link" routerLink="/" (click)="toggleMobileNav()">
+        <a class="navbar-navigation-link home-link" routerLink="/" (click)="closeMobileNav()">
           Home
         </a>
         <div class="dropdown">
-          <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse
+          <a class="navbar-navigation-link" routerLink="/kurse" (click)="closeMobileNav()">Kurse
             <i class="dropdown-arrow fa fa-caret-down"></i>
           </a>
           <div class="dropdown-content">
-            <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse</a>
-            <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="toggleMobileNav()">Preise und Stundenpläne</a>
+            <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="closeMobileNav()">Kurse</a>
+            <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="closeMobileNav()">Preise und Stundenpläne</a>
           </div>
         </div>
-        <a class="navbar-navigation-link" routerLink="/blog" (click)="toggleMobileNav()">
+        <a class="navbar-navigation-link" routerLink="/blog" (click)="closeMobileNav()">
           Aktuelles
         </a>
-        <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
+        <a class="navbar-navigation-link" routerLink="/auftritte" (click)="closeMobileNav()">
           Auftritte
         </a>
-        <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
+        <a class="navbar-navigation-link" routerLink="/team" (click)="closeMobileNav()">
           Team
         </a>
-        <a class="navbar-navigation-link" routerLink="/standorte" (click)="toggleMobileNav()">
+        <a class="navbar-navigation-link" routerLink="/standorte" (click)="closeMobileNav()">
           Standorte
         </a>
-        <a class="navbar-navigation-link" routerLink="/kontakt" (click)="toggleMobileNav()">
+        <a class="navbar-navigation-link" routerLink="/kontakt" (click)="closeMobileNav()">
           Kontakt
         </a>
       </div>
