--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -190,6 +190,8 @@
                     overflow: hidden;
 
                     &:hover {
+                        overflow: visible;
+                        height: 250px;
                         .dropdown-arrow {
                             opacity: 1;
                         }
