--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,9 +1,9 @@
 <div class="schedule-component">
   <div class="schedule-header">
     <h2 class="schedule-title" (click)="toggleScheduleOpen()">
-      <i class="fas fa-caret-right navigation-icon" [ngClass]="scheduleOpen ? 'schedule-open' : ''" *ngIf="displayDrawer"></i>
       <span>Stundenplan</span>
       <span *ngIf="location"> Studio {{location.name}}</span>
+      <!--<i class="fas fa-arrow-right navigation-icon" [ngClass]="scheduleOpen ? 'schedule-open' : ''" *ngIf="displayDrawer"></i>-->
     </h2>
     <div class="schedule-navigation-container" [ngClass]="[courseShortId ? 'schedule-navigation-hide-filters' : '', scheduleOpen === false ? 'schedule-closed' : 'schedule-open']">
       <div class="schedule-navigation-filter-segments">
@@ -60,10 +60,16 @@
       </div>
     </div>
   </div>
+  <div class="tth-button-container" *ngIf="!scheduleOpen">
+    <a class="tth-button" (click)="toggleScheduleOpen()">
+      <i class="tth-button-icon far fa-eye"></i>
+      <span class="tth-button-label">Stundenplan anzeigen</span>
+    </a>
+  </div>
   <div class="tth-button-container" *ngIf="schedulePDF">
-      <a class="tth-button" href={{schedulePDF}} download="Stundenplan_Markgroeningen" target="_blank">
-        <i class="tth-button-icon fas fa-cloud-download-alt"></i>
-        <span class="tth-button-label">Download Stundenplan</span>
-      </a>
-    </div>
+    <a class="tth-button" href={{schedulePDF}} download="Stundenplan_Markgroeningen" target="_blank">
+      <i class="tth-button-icon fas fa-cloud-download-alt"></i>
+      <span class="tth-button-label">Stundenplan Download</span>
+    </a>
+  </div>
 </div>
