--- a/src/app/sites/current/current-details/current-details.component.html
+++ b/src/app/sites/current/current-details/current-details.component.html
@@ -3,7 +3,7 @@
         <h1 class="post-title">{{blogPost.title}}</h1>
         <app-image-slider [images]='blogPost.images' [listid]='currentListShortId' *ngIf="blogPost.images && blogPost.images.length > 0"></app-image-slider>
         <div class="post-description" [innerHTML]="blogPost.description"></div>
-        <div class="post-date">{{getDateStringLong()}}</div>
+        <div class="post-date">gepostet am {{getDateStringLong()}}</div>
         <iframe class="blog-post-details-video" *ngIf="blogPost.youtubeVideoId" [src]="getYoutubeLink()" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 </div>
