--- a/src/app/sites/stage/stage.component.scss
+++ b/src/app/sites/stage/stage.component.scss
@@ -48,7 +48,7 @@
                     }
                     .performance-poster-label-container {
                         //opacity: 0;
-                        background-color: $accent-color-1;
+                        background-color: rgba($accent-color-1, 0.6);
                     }
                 }
             }
