--- a/src/app/sites/team/teacher-details/teacher-details.component.html
+++ b/src/app/sites/team/teacher-details/teacher-details.component.html
@@ -1,4 +1,4 @@
-<div class="teacher-content-container main-content-container main-content-container-padding" *ngIf="teacher">
+<div class="teacher-content-container main-content-container main-content-container-padding main-content-navbar-spacer" *ngIf="teacher">
   <div class="main-content teacher-content">
     <h1 class="teacher-heading">
       {{teacher.firstName + " " + teacher.lastName}}
