--- a/src/app/main-page/main-page-section/main-page-section.component.scss
+++ b/src/app/main-page/main-page-section/main-page-section.component.scss
@@ -10,6 +10,9 @@ $main-page-text-color: #fff;
     animation-duration: 1s;
     animation-timing-function: ease;
     animation-fill-mode: forwards;
+    &.first-section {
+        border-top: 1px solid $main-page-text-color;
+    }
     .main-page-section-background {
         position: relative;
         opacity: 0.8;
@@ -18,18 +21,18 @@ $main-page-text-color: #fff;
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
-        height: 200px;;
+        height: 200px;
         .main-page-section-container {
             display: none;
             position: absolute;
-            top: 30%;
+            top: 20%;
             width: 100%;
             .main-page-section-content-container {  
                 .main-page-section-content {
                     left: 0;
                     text-align: center;
                     color: $main-page-text-color;
-                    background-color: rgba(77, 77, 77, 0.5);
+                    background-color: rgba(0, 0, 0, 0.5);
                     @include transition(background-color 0.2s ease);
                     padding: 30px;
                     &.section-link:hover {
@@ -38,10 +41,9 @@ $main-page-text-color: #fff;
                     }
                     .main-page-section-caption {
                         border: 2px solid $main-text-color;
-                        padding: 10px;
+                        padding: 5px;
                         font-size: 14px;                
                         letter-spacing: 10px;
-                        margin: 20px;
                         text-transform: uppercase;
                         text-decoration: none;
                         color: $main-page-text-color;
@@ -96,23 +98,26 @@ $main-page-text-color: #fff;
 
 @media (min-width: $media-breakpoint-md) {
     .main-page-section {
-        min-height: 100%;
+        height: 600px;
+        // min-height: 100%;
         .main-page-section-background {
             height: 100%;
-            position: absolute;
+            //position: absolute;
             .main-page-section-container {
                 display: block;
                 .main-page-section-content-container {
-                    max-width: $media-breakpoint-md;
+                    max-width: $media-breakpoint-md - 200px;
                     margin: 0 auto; 
                     .main-page-section-content {
                                     
                         .main-page-section-caption {
                             font-size: 30px;  
-                            padding: 18px;                    
+                            padding: 5px 30px;  
+                            display: inline-block;   
+                            font-weight: 600px;               
                         }
                         .main-page-section-description {
-                            font-size: 20px;
+                            font-size: 16px;
                         }
                     }
                 }
@@ -130,7 +135,7 @@ $main-page-text-color: #fff;
             background-attachment: fixed;
             .main-page-section-container {
                 .main-page-section-content-container {
-                    max-width: $media-breakpoint-lg;                
+                    max-width: $media-breakpoint-lg - 200px;                
                 }
             }
         }
