--- a/src/app/main-page/text-animation/text-animation.component.scss
+++ b/src/app/main-page/text-animation/text-animation.component.scss
@@ -10,6 +10,7 @@
     animation-timing-function: ease;
     animation-fill-mode: forwards;
     font-size: 34px;
+    line-height: 40px;
     font-weight: 600;
 }
 
