--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -30,6 +30,16 @@
                         text-decoration: none;
                         color: $main-text-color;
                     }
+                    .consultation-label {
+                        &:hover {
+                            cursor: pointer;
+                            text-decoration: underline;
+                        }
+                        i {
+                            font-size: 10px;
+                            margin-left: 10px;
+                        }
+                    }
                     .footer-section-content-link-inline {
                         display: inline-block;
                         margin-right: 4px;
@@ -39,6 +49,19 @@
                         text-decoration: none;
                         color: $main-text-color;
                         margin: 10px;
+                        position: relative;
+                        width: 40px;
+                        height: 40px;
+                        padding: 10px;
+                        @include border-radius(30px);
+                        border: 1px solid #fff;
+                        i {
+                            position: absolute;
+                            font-size: 30px;
+                            width: 40px;
+                            left: 10px;
+                            top: 13px;
+                        }
                     }
                     .footer-section-content-break {
                         height: 15px;
