--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,11 +8,153 @@
     width: 100%;
     opacity: 0;
     animation: fade-in 1s ease forwards;
+    height: 70px;
+    // background-color: #000000;
+    .loading-animation-container {
+        width: 100%;
+        text-align: center;
+        overflow: visible;
+        position: relative;
+
+        .logo-container {
+            position: absolute;
+            top: 0;
+            opacity: 0;
+            width: 100%;
+            .logo-container-inner {
+                margin: 10px auto 0 auto;
+                height: 42px;
+                width: 20px;
+                .logo {
+                    
+                }
+            }
+            &.show {
+                opacity: 1;
+                animation-name: logo-slide-down;
+                animation-duration: 0.3s;
+                animation-timing-function: ease;
+                animation-fill-mode: forwards;
+            }
+            &.home-page {
+                transform: translateY(200px);
+                animation: fade-in 0.5s ease forwards;
+                @include transition(
+                    // top 1s cubic-bezier(0.53, 0.01, 0.23, 1), 
+                    height 1s, 
+                    width 1s,
+                    transform 1s
+                );
+            }
+            &.move-up {
+                animation: slide-to-top 1s cubic-bezier(0.53, 0.01, 0.23, 1) forwards;
+                transform: translateY(0);
+                // top: 50px;
+                // height: 42px;
+                // width: 20px;
+                
+            }
+            .logo {
+                background-image: url("../../../resources/Logo.png"); 
+                background-size: 100% 100%;
+                width: 100%;
+                height: 100%;
+                &:hover {
+                    cursor: pointer;
+                }
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+
+        .loader-container {
+            opacity: 1;
+            transform: translateY(0px);
+            margin-top: 0px;
+            position: absolute;
+            top: 5px;
+            height: 50px;
+            width: 100%;
+            @include transition(
+                transform 0.3s ease,
+                opacity 0.3s ease
+            );
+            &.hide {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            .loader-circle {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                box-shadow: inset 0 0 0 1px rgba(255,255,255,.1);
+                margin-left: -20px;
+                margin-top: -20px;
+                -webkit-animation: rotate 0.6s infinite linear;
+                -moz-animation: rotate 0.6s infinite linear;
+                -o-animation: rotate 0.6s infinite linear;
+                animation: rotate 0.6s infinite linear;
+            }
+            
+            .loader-line-mask {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                width: 20px;
+                height: 40px;
+                margin-left: -20px;
+                margin-top: -20px;
+                overflow: hidden;
+                -webkit-transform-origin: 20px 20px;
+                -moz-transform-origin: 20px 20px;
+                -ms-transform-origin: 20px 20px;
+                -o-transform-origin: 20px 20px;
+                transform-origin: 20px 20px;
+                -webkit-mask-image: -webkit-linear-gradient(top, #000000, rgba(0, 0, 0, 0));
+                -webkit-animation: rotate 0.6s infinite linear;
+                -moz-animation: rotate 0.6s infinite linear;
+                -o-animation: rotate 0.6s infinite linear;
+                animation: rotate 0.6s infinite linear;
+                .loader-line {
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    box-shadow: inset 0 0 0 1px rgba(255,255,255,.5);
+                }
+            }
+        }
+
+        .title-container {
+            width: 100%;
+            position: absolute;
+            top: 58px;
+            opacity: 1;
+            opacity: 0;
+            animation: fade-in 0.8s ease forwards;
+            animation-delay: 1s;
+            .title {
+                color: $main-text-color;
+                line-height: 18px;
+                font-size: 14px;
+                text-transform: uppercase;
+                display: inline-block;
+                &:hover {
+                    cursor: pointer;
+                }
+                &:focus {
+                    outline: none;
+                }
+            }
+        }
+    }
     .navbar {
         @include flexbox();
         height: 70px;
         overflow: hidden;
-        background-color: #000000;
         width: 100%;
         // position: fixed; /* Set the navbar to fixed position */
         top: 0; /* Position the navbar at the top of the page */
@@ -22,6 +164,7 @@
             height: 50px;
             cursor: pointer;
             @include flexbox();
+            display: none;
             &:focus {
                 outline: none;
             }
@@ -65,7 +208,7 @@
             @include transition(background-color 0.5s ease);
             &:hover {
                 cursor: pointer;
-                background-color: $accent-color-1;
+                // background-color: $accent-color-1;
             }
             .navbar-menu-icon {
                 width: 35px;
@@ -83,7 +226,7 @@
     }
 }
 
-@media (max-width: $media-breakpoint-md - 1) {
+// @media (max-width: $media-breakpoint-md - 1) {
     .navbar-container {
         .navbar {
             .navbar-menu-icon-container {
@@ -93,9 +236,26 @@
                 width: 70px;
                 right: 30px;
                 top: 0;
-                background-color: #202020;
+                // background-color: #202020;
                 .navbar-menu-icon {
                     margin: 20px 17px;
+                }
+            }
+            .navbar-page-overlay {
+                display: none;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background-color: rgba(#000000, 0.7);
+                opacity: 0;
+                &.show {
+                    display: block;
+                    animation-name: fade-in;
+                    animation-duration: 0.5s;
+                    animation-timing-function: ease;
+                    animation-fill-mode: forwards;
                 }
             }
             .navbar-navigation {
@@ -109,12 +269,12 @@
                 @include transition(transform 0.5s ease);
                 overflow: hidden;
                 z-index: 1;
-                background-color: #202020;
+                background-color: #070707;
 
                 .navbar-navigation-link {
                     //font-style: italic;
-                    font-size: 1.5em;
-                    padding: 4px 0 4px 50px;
+                    font-size: 1.3em;
+                    padding: 4px 20px 4px 50px;
                     @include transition(
                         padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
                         background-color 0.3s
@@ -162,89 +322,111 @@
             }
         }
     }
-}
+// }
+
+// @media (min-width: $media-breakpoint-md) {
+//     .navbar-container {
+//         .navbar {
+//             .navbar-menu-icon-container {
+//                 display: none;
+//             }
+//             .navbar-navigation {
+//                 @include flex(1);
+//                 @include flexbox();
+//                 @include justify-content(flex-end);
+
+//                 .navbar-navigation-link:not(.dropdown-link) {
+//                     height: 25px;
+//                     margin: 25px 10px 20px 10px;
+//                     text-align: center; 
+//                     border-bottom: 1px transparent;
+//                     @include transition(border-bottom 0.3s ease);
+//                     &:hover {
+//                         border-bottom: 1px solid #fff;
+//                     }
+//                 }
+
+//                 .dropdown {
+//                     overflow: hidden;
+
+//                     &:hover {
+//                         overflow: visible;
+//                         height: 250px;
+//                         .dropdown-arrow {
+//                             opacity: 1;
+//                         }
+//                         .dropdown-content {
+//                             display: block;
+//                         }
+//                     }
+
+//                     .dropdown-arrow {
+//                         opacity: 0;
+//                         @include transition(opacity 0.3s ease);
+//                     }
+
+//                     .dropdown-content {
+//                         display: none;
+//                         position: absolute;
+//                         background-color: #f9f9f9;
+//                         min-width: 160px;
+//                         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+//                         z-index: 1;
+
+//                         .dropdown-link {
+//                             float: none;
+//                             color: black;
+//                             margin: 0;
+//                             padding: 12px 16px;
+//                             text-decoration: none;
+//                             display: block;
+//                             text-align: left;
+
+//                             &:hover {
+//                                 background-color: #ddd;
+//                             }
+//                         }
+//                     }
+//                 }
+
+//                 .home-link {
+//                     display: none;
+//                 }
+//             }
+//         }
+//     }
+// }
 
 @media (min-width: $media-breakpoint-md) {
     .navbar-container {
         .navbar {
-            .navbar-menu-icon-container {
-                display: none;
-            }
             .navbar-navigation {
-                @include flex(1);
-                @include flexbox();
-                @include justify-content(flex-end);
-
-                .navbar-navigation-link:not(.dropdown-link) {
-                    height: 25px;
-                    margin: 25px 10px 20px 10px;
-                    text-align: center; 
-                    border-bottom: 1px transparent;
-                    @include transition(border-bottom 0.3s ease);
-                    &:hover {
-                        border-bottom: 1px solid #fff;
-                    }
-                }
-
-                .dropdown {
-                    overflow: hidden;
-
-                    &:hover {
-                        overflow: visible;
-                        height: 250px;
-                        .dropdown-arrow {
-                            opacity: 1;
-                        }
-                        .dropdown-content {
-                            display: block;
-                        }
-                    }
-
-                    .dropdown-arrow {
-                        opacity: 0;
-                        @include transition(opacity 0.3s ease);
-                    }
-
-                    .dropdown-content {
-                        display: none;
-                        position: absolute;
-                        background-color: #f9f9f9;
-                        min-width: 160px;
-                        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-                        z-index: 1;
-
-                        .dropdown-link {
-                            float: none;
-                            color: black;
-                            margin: 0;
-                            padding: 12px 16px;
-                            text-decoration: none;
-                            display: block;
-                            text-align: left;
-
-                            &:hover {
-                                background-color: #ddd;
-                            }
-                        }
-                    }
-                }
-
-                .home-link {
-                    display: none;
-                }
+                max-width: 400px;
             }
         }
     }
 }
 
-@media (min-width: $media-breakpoint-lg) {
-    .navbar-container {
-        .navbar {
-            .navbar-navigation {
-                .navbar-navigation-link:not(.dropdown-link) {
-                    margin: 25px 20px 20px 20px;
-                }
-            }
-        }
+
+// @media (min-width: $media-breakpoint-lg) {
+//     .navbar-container {
+//         .navbar {
+//             .navbar-navigation {
+//                 .navbar-navigation-link:not(.dropdown-link) {
+//                     margin: 25px 20px 20px 20px;
+//                 }
+//             }
+//         }
+//     }
+// }
+
+@keyframes logo-slide-down {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0px);
     }
 }
