--- a/src/app/sites/stage/performance/performance.component.html
+++ b/src/app/sites/stage/performance/performance.component.html
@@ -1,8 +1,8 @@
 <div class="performance-component" *ngIf="performance">
-  <div class="performance-content-container main-content-container main-content-container-padding">
+  <div class="performance-content-container main-content-container main-content-container-padding main-content-navbar-spacer">
     <div class="main-content">
       <h1 class="performance-title" [innerHTML]="performance.title"></h1>
-      <div class="performance-date" [innerHTML]="getDateStringLong()"></div>
+      <div class="performance-date" *ngIf="performance.date" [innerHTML]="getDateStringLong()"></div>
       <app-image-slider [images]='performance.gallery' [listid]='performancesListId'></app-image-slider>
       <div class="performance-description" [innerHTML]="performance.description"></div>
     </div>
