--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
-<div class="loading-overlay" [ngClass]="[pageLoaded ? 'hide-overlay' : '', removeOverlay ? 'remove-overlay' : '']">
+<div class="loading-overlay" [ngClass]="[pageLoaded && isBrowser ? 'hide-overlay' : '', removeOverlay && isBrowser ? 'remove-overlay' : '']">
   <div class="vertical-centered-box">
     <!-- <div class="logo" [ngClass]="[pageLoaded ? 'move-up' : '']">
 
