--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,8 +12,8 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 3;
-    // background-color: $main-background-color-dark;
+    // z-index: 3;
+    background-color: $main-background-color-dark;
     opacity: 1;
     top: 0;
     @include transition(opacity 1s ease);
