--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,14 +6,17 @@ $header-link-color: #f2f2f2;
 $header-hover-background-color: #595959;
 $main-text-color: #F6F5F5;
 $main-text-color-on-dark-bg: #ffffff;
-$main-text-color-on-light-bg: #000000;
+$main-text-color-on-light-bg: #252525;
 $post-seperator-color: #8C8C8C;
 $accent-color-1: #595959;
 $main-background-color-dark: #000000;
-$main-background-color-imprint: #333333;
+$main-background-color-imprint: #1b1b1b;
+$main-background-color-light: #f0f0f0;
 $download-link-color: #dbd6d6;
-$background-color-dark-2: #0f0f0f;
+$background-color-dark-2: #222222;
+$background-color-dark-3: #0f0f0f;
 $border-color-dark-2: #2c2c2c;
+$border-color-light-2: #b4b4b4;
 $link-color: #4454e6;
 $link-color-hover: #0934c4;
 
