:lipstick: Style fixes

--- a/src/app/courses-overview/courses-overview.component.html
+++ b/src/app/courses-overview/courses-overview.component.html
@@ -18,6 +18,9 @@
           <div class="thumb-spacer">
 
           </div>
+          <div class="thumb-index">
+            0{{i + 1}}
+          </div>
           <div class="thumb-title">
             {{course.title}}
           </div>  
