--- a/src/app/sites/courses/courses.component.html
+++ b/src/app/sites/courses/courses.component.html
@@ -1,4 +1,4 @@
-<div class="main-content-container main-content-container-padding courses-content-container">
+<div class="main-content-container main-content-container-padding courses-content-container main-content-navbar-spacer">
   <div class="main-content">
     <h2 class="courses-title main-title">Kurse</h2>
   </div>
