--- a/src/app/sites/stage/stage.component.scss
+++ b/src/app/sites/stage/stage.component.scss
@@ -14,6 +14,12 @@
         background-color: #000;
         .performance-poster-container {
             width: 100%;
+            opacity: 0;
+            animation-name: fade-in;
+            animation-delay: 0.3s;
+            animation-duration: 0.7s;
+            animation-timing-function: ease;
+            animation-fill-mode: forwards;
             .performance-poster {
                 text-decoration: none; 
                 position: relative;
@@ -61,6 +67,7 @@
         padding: 50px 0;
         .performances-content {
             .performance-poster-container {
+                border-bottom: 1px solid $border-color-dark-2;
                 .performance-poster {
                     background-image: none !important;
                     .performance-poster-label-container {
@@ -83,12 +90,6 @@
             .performance-poster-container {
                 width: 50%;
                 height: 500px;
-                opacity: 0;
-                animation-name: fade-in;
-                animation-delay: 0.3s;
-                animation-duration: 0.7s;
-                animation-timing-function: ease;
-                animation-fill-mode: forwards;
                 margin-bottom: 20px;
                 &:nth-child(odd) {
                     padding-right: 10px;
