--- a/src/app/main-page/main-page-section/main-page-section.component.scss
+++ b/src/app/main-page/main-page-section/main-page-section.component.scss
@@ -105,6 +105,7 @@ $main-page-text-color: #fff;
             //position: absolute;
             .main-page-section-container {
                 display: block;
+                top: 30%;
                 .main-page-section-content-container {
                     max-width: $media-breakpoint-md - 200px;
                     margin: 0 auto; 
@@ -131,6 +132,7 @@ $main-page-text-color: #fff;
 
 @media (min-width: $media-breakpoint-lg) {
     .main-page-section {
+        height: 800px;
         .main-page-section-background {
             background-attachment: fixed;
             .main-page-section-container {
