--- a/src/app/sites/courses/course-information/course-information.component.scss
+++ b/src/app/sites/courses/course-information/course-information.component.scss
@@ -5,9 +5,13 @@
 }
 
 .courses-content-container {
-  padding-top: 20px;
   padding-bottom: 20px;
-
+  opacity: 0;
+  animation-name: fade-in;
+  animation-delay: 0.3s;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards; 
   .schedule {
     width:100%;
     height: 350px;
@@ -19,7 +23,6 @@
     display: block;
   }
   .courses-content-container {
-    padding-top: 50px;
     padding-bottom: 50px;
     .schedule {
       height: 600px;
@@ -29,7 +32,7 @@
 
 @media (min-width: $media-breakpoint-md) {
   .courses-content-container {
-    padding-top: 70px;
+    padding-top: 30px;
     padding-bottom: 70px;
     .schedule {
       height: 750px;
