--- a/src/app/sites/courses/courses.component.scss
+++ b/src/app/sites/courses/courses.component.scss
@@ -1,10 +1,10 @@
 @import '../../../variables.scss';
 
 .courses-content-container {
-    padding-top: 20px;
     color:$main-text-color;
     .courses-title { 
         margin-top: 20px;
+        margin-bottom: 20px;
     }
 }
 
