--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,7 +8,8 @@ $main-text-color: #F6F5F5;
 $main-text-color-on-dark-bg: #ffffff;
 $main-text-color-on-light-bg: #252525;
 $post-seperator-color: #8C8C8C;
-$accent-color-1: #595959;
+$accent-color-1: #007aff;
+//$accent-color-1: #595959;
 $main-background-color-dark: #000000;
 $main-background-color-imprint: #1b1b1b;
 $main-background-color-light: #f0f0f0;
