--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,8 +8,7 @@
     width: 100%;
     opacity: 0;
     animation: fade-in 1s ease forwards;
-    height: 70px;
-    // background-color: #000000;
+    height: 60px;
     .loading-animation-container {
         width: 100%;
         text-align: center;
@@ -17,10 +16,18 @@
         position: relative;
 
         .logo-container {
-            position: absolute;
+            position: fixed;
             top: 0;
             opacity: 0;
             width: 100%;
+            height: 60px;
+            background-color: transparent;
+            @include transition(
+                background-color 0.5s ease
+            );
+            &.background-active {
+                background-color: rgba(#000, 0.8);
+            }
             .logo-container-inner {
                 margin: 10px auto 0 auto;
                 height: 42px;
@@ -130,12 +137,9 @@
 
         .title-container {
             width: 100%;
-            position: absolute;
-            top: 58px;
-            opacity: 1;
+            position: fixed;
+            top: 65px;
             opacity: 0;
-            animation: fade-in 0.8s ease forwards;
-            animation-delay: 1s;
             .title {
                 color: $main-text-color;
                 line-height: 18px;
@@ -148,6 +152,13 @@
                 &:focus {
                     outline: none;
                 }
+            }
+            &.show {
+                animation: fade-in 0.8s ease forwards;
+                animation-delay: 1s;
+            } 
+            &.hide {
+                animation: fade-out 0.3s ease forwards;
             }
         }
     }
@@ -206,14 +217,14 @@
 
         .navbar-menu-icon-container {
             @include transition(background-color 0.5s ease);
-            &:hover {
-                cursor: pointer;
-                // background-color: $accent-color-1;
-            }
             .navbar-menu-icon {
                 width: 35px;
                 float: right;
                 z-index: 99;
+                &:hover {
+                    cursor: pointer;
+                    // background-color: $accent-color-1;
+                }
                 .bar {
                     height: 2px;
                     width: 35px;
@@ -232,14 +243,9 @@
             .navbar-menu-icon-container {
                 position: fixed;
                 z-index: 99;
-                height: 70px;
-                width: 70px;
+                margin-top: 15px;
                 right: 30px;
                 top: 0;
-                // background-color: #202020;
-                .navbar-menu-icon {
-                    margin: 20px 17px;
-                }
             }
             .navbar-page-overlay {
                 display: none;
@@ -279,7 +285,7 @@
                         padding 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
                         background-color 0.3s
                     );
-                    &:hover {
+                    &:hover, &:focus {
                         background-color: $accent-color-1;
                         padding-left: 70px;
                     }
