--- a/src/app/sites/team/teacher-details/teacher-details.component.html
+++ b/src/app/sites/team/teacher-details/teacher-details.component.html
@@ -1,6 +1,6 @@
 <div class="teacher-content-container main-content-container main-content-container-padding main-content-navbar-spacer" *ngIf="teacher">
   <div class="main-content teacher-content">
-    <h1 class="teacher-heading">
+    <h1 class="teacher-heading title-medium">
       {{teacher.firstName + " " + teacher.lastName}}
     </h1>
     <div class="teacher-flex-container">
@@ -8,7 +8,7 @@
 
       </div>
       <div class="teacher-description-container">
-        <h1 class="teacher-heading">
+        <h1 class="teacher-heading title-medium">
           {{teacher.firstName + " " + teacher.lastName}}
         </h1>
         <div class="teacher-task">
