--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,15 @@ body, html {
     background-color: #000;
 }
 
+input,
+textarea,
+button,
+select,
+div,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -54,8 +63,11 @@ app-current {
     margin-top: 80px;
 }
 
-.main-title {
+.main-title, .title-medium {
     margin: 0;
+    font-size: 1.9em;
+    line-height: 1.4em;
+    text-transform: uppercase;
 }
 
 .tth-button {
@@ -85,6 +97,15 @@ app-current {
     }
     to {
         opacity: 1;
+    }
+}
+
+@keyframes fade-out {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
     }
 }
 
@@ -125,6 +146,9 @@ app-current {
     .main-content-container-padding {
         padding-left: 50px;
         padding-right: 50px;
+    }
+    .main-title, .title-medium {
+        text-align: center;
     }
 }
 
