--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
-@import './mixins';
+@import './../node_modules/webapps-reschke-common/scss/mixins';
 
 /* You can add global styles to this file, and also import other style files */
 body, html {
