Extract mixins.scss to webapps-reschke-common

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 @import '../variables';
-@import '../mixins';
+@import '~webapps-reschke-common/scss/mixins';
 
 .app-container {
     position: absolute;
