--- a/src/app/components/header-image/header-image.component.scss
+++ b/src/app/components/header-image/header-image.component.scss
@@ -1,5 +1,5 @@
 @import '../../../variables.scss';
-@import '../../../mixins.scss';
+@import '~webapps-reschke-common/scss/mixins';
 
 @keyframes slide-in {
     from {
