--- a/src/app/sites/courses/course-details/course-details.component.scss
+++ b/src/app/sites/courses/course-details/course-details.component.scss
@@ -1,5 +1,6 @@
 @import '../../../../variables.scss';
-@import '../../../../mixins.scss';
+@import '~webapps-reschke-common/scss/mixins';
+
 
 .course-details-content-container {
     opacity: 0;
