--- a/src/app/components/cookies-notification/cookies-notification.component.scss
+++ b/src/app/components/cookies-notification/cookies-notification.component.scss
@@ -1,5 +1,5 @@
 @import '../../../variables.scss';
-@import '../../../mixins.scss';
+@import '~webapps-reschke-common/scss/mixins';
 
 .cookies-notification-container {
     position: fixed;
