--- a/src/app/main-page/text-animation/text-animation.component.scss
+++ b/src/app/main-page/text-animation/text-animation.component.scss
@@ -1,5 +1,5 @@
 @import '../../../variables.scss';
-@import '../../../mixins.scss';
+@import '~webapps-reschke-common/scss/mixins';
 
 .text-animation-container {
     display: inline-block;
