--- a/src/app/sites/current/current-details/current-details.component.scss
+++ b/src/app/sites/current/current-details/current-details.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../variables.scss';
-@import '../../../../mixins.scss';
+@import '~webapps-reschke-common/scss/mixins';
 
 .blog-post-details {
     opacity: 0;
